flapivor/tests/m3/hopix/typechecker/good/46-pattern-matching-10.hopix
type `<a, b> = `(a, b)

val x : Int = case `<Int, Int>(22, 33) {
  `<Int, Int>(x : Int, _ : Int) & `<Int, Int>(_ : Int, y : Int) => x + y
}