flapivor/tests/m3/hopix/typechecker/bad/80-pattern-01.hopix
val main : Int =
    case 0 { (x : Int) & (x : String) => x }